--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -54,8 +54,7 @@ gem 'faker', :git => 'https://github.com/faker-ruby/faker.git', :branch => 'mast
 gem 'image_processing', '~> 1.2'
 gem "aws-sdk-s3", require: false
 gem 'rack-cors'
-
-
+gem "pgcrypto"
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
