--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -55,6 +55,7 @@ gem 'image_processing', '~> 1.2'
 gem "aws-sdk-s3", require: false
 gem 'rack-cors'
 gem "pgcrypto"
+gem 'easypost'
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
