--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -54,11 +54,11 @@ gem 'active_model_serializers'
 gem 'faker', :git => 'https://github.com/faker-ruby/faker.git', :branch => 'master'
 # Use Active Storage variant
 gem 'rack-cors'
-gem "pgcrypto"
+# gem "pgcrypto"
 gem 'easypost'
 gem 'uri'
 gem 'open-uri'
-gem 'active_record-pgcrypto', require: 'active_record/pgcrypto'
+# gem 'active_record-pgcrypto', require: 'active_record/pgcrypto'
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
