--- a/back-end/Gemfile
+++ b/back-end/Gemfile
@@ -58,6 +58,7 @@ gem 'rack-cors'
 gem 'easypost'
 gem 'uri'
 gem 'open-uri'
+gem 'kaminari'
 # gem 'active_record-pgcrypto', require: 'active_record/pgcrypto'
 group :development, :test do
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
